Upper Block Completed

--- a/index.html
+++ b/index.html
@@ -1,87 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project 2</title>
+  </head>
+  <body>
+    <div class="top-container">
+      <div>
+        <h1 class="toph1">Social Media Dashboard</h1>
+        <h3 class="toph3">Total followers: 28,043</h3>
+      </div>
+    </div>
+    <div class="sq-cards">
+      <div class="sq-card card1">
+        <hr class="sq-hr sh1" />
+        <div class="handle">
+          <img class="icon" src="./images/icon-facebook.svg" alt="" />
+          <h5 class="at">@nathanf</h5>
+        </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Social Media Dashboard
-  Total Followers: 23,004
-
-  Dark Mode
-
-  
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-
-
-
-  Overview - Today
-
-  Page Views
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <h1 class="count">1987</h1>
+        <h3 class="flw">FOLLOWERS</h3>
+        <h5 class="change plus">▲ +12 Today</h5>
+      </div>
+      <div class="sq-card card2">
+        <hr class="sq-hr sh2" />
+        <div class="handle">
+          <img class="icon" src="./images/icon-twitter.svg" alt="" />
+          <h5 class="at">@nathanf</h5>
+        </div>
+        <h1 class="count">1044</h1>
+        <h3 class="flw">FOLLOWERS</h3>
+        <h5 class="change plus">▲ +99 Today</h5>
+      </div>
+      <div class="sq-card card3">
+        <hr class="sq-hr sh3" />
+        <div class="handle">
+          <img class="icon" src="./images/icon-instagram.svg" alt="" />
+          <h5 class="at">@realnathanf</h5>
+        </div>
+        <h1 class="count">11000</h1>
+        <h3 class="flw">FOLLOWERS</h3>
+        <h5 class="change minus">▼ -1000 Today</h5>
+      </div>
+      <div class="sq-card card4">
+        <hr class="sq-hr sh4" />
+        <div class="handle">
+          <img class="icon" src="./images/icon-youtube.svg" alt="" />
+          <h5 class="at">Nathan F.</h5>
+        </div>
+        <h1 class="count">8239</h1>
+        <h3 class="flw">SUBSCRIBERS</h3>
+        <h5 class="change plus">▲ +199 Today</h5>
+      </div>
+    </div>
+    <div class="overview">
+      <h2>Overview - Today</h2>
+    </div>
+    <div class="bottom-cards">
+      <div class="bottom-card bc1">
+        <h4>Page Views</h4>
+        <h2>87</h2>
+      </div>
+      <div class="bottom-card bc2">
+        <h4>Page Views</h4>
+        <h2>87</h2>
+      </div>
+      <div class="bottom-card bc3">
+        <h4>Page Views</h4>
+        <h2>87</h2>
+      </div>
+      <div class="bottom-card bc4">
+        <h4>Page Views</h4>
+        <h2>87</h2>
+      </div>
+      <div class="bottom-card bc5">
+        <h4>Page Views</h4>
+        <h2>87</h2>
+      </div>
+      <div class="bottom-card bc6">
+        <h4>Page Views</h4>
+        <h2>87</h2>
+      </div>
+      <div class="bottom-card bc7">
+        <h4>Page Views</h4>
+        <h2>87</h2>
+      </div>
+      <div class="bottom-card bc8">
+        <h4>Page Views</h4>
+        <h2>87</h2>
+      </div>
+    </div>
+  </body>
 </html>
